completed second task

--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,25 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="index.css">
+</head>
+<body>
+  <section class="section-container solid">
+    <div class="purple"></div>
+    <div class="green"></div>
+    <div class="circle"></div>
+  </section>
+  <section class="section-container dot">
+    <div class="inside">
+
+    </div>
+  </section>
+  <section class="section-container">
+    <div class="words">Hello Friends</div>
+  </section>
+</body>
+</html>
